# rust_experiment_with_terminal

./: Cargo.toml
src/: main.rs  termplete.rs
