[package]
name = "rustautocomplete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reedline = "0.23.0"
crossterm = { version = "0.26.1", features = ["serde"] }
nu-ansi-term = "0.49.0"
rust_xlsxwriter = "0.46.0"
serde_json = "1.0.105"
shlex = "1.1.0"

